--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "next"
+    "start": "next",
+    "api": "json-server data/db.json --port 4000"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "isomorphic-unfetch": "^2.1.1",
+    "json-server": "^0.14.0",
     "next": "^6.1.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
