--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "next",
-    "api": "json-server data/db.json --port 4000"
+    "start": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
     "isomorphic-unfetch": "^2.1.1",
     "json-server": "^0.14.0",
+    "mongoose": "^5.2.9",
     "next": "^6.1.1",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
